<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="10sp">

    <EditText
            android:id="@+id/id_pin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_old_pin"
            android:inputType="phone"
            android:singleLine="true">
        <requestFocus/>
    </EditText>

    <EditText
            android:id="@+id/id_new_pin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_new_pin"
            android:inputType="phone"
            android:singleLine="true">
    </EditText>
    <EditText
            android:id="@+id/id_re_new_pin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_re_new_pin"
            android:inputType="phone"
            android:singleLine="true">
    </EditText>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/btn_cancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/dialog_cancel"/>
        <Button
                android:id="@+id/btn_confirm"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/btn_cancel"
                android:text="@string/dialog_confirm"/>
    </RelativeLayout>

</LinearLayout>